# eden_gpu

./: .gitignore  CHANGELOG.txt  CMakeLists.txt  LEMS_NML2_Ex25_MultiCelltypes_TEST.txt  LEMS_NML2_Ex25_MultiComp.txt  LICENCE.txt  Makefile  README.md  regression_test.py
eden/: AbstractBackend.h  AppendToVector.h  Common.h  Eden.cpp  EngineConfig.h  FixedWidthNumberPrinter.h  GPU_helpers.cu  GPU_helpers.h  GenerateModel.cpp  GenerateModel.h  GeomHelp_Base.h  IterationCallback.h  MpiBuffers.h  Mpi_helpers.cpp  Mpi_helpers.h  NeuroML.cpp  NeuroML.h  RawTables.h  SimulatorConfig.h  StateBuffers.h  StringHelpers.h  TableEntry.h  Timer.h  TrajectoryLogger.h  TypePun.h  Utils.cpp  backends.h  mpi_setup.h  parse_command_line_args.cpp  parse_command_line_args.h  print_eden_cli_header.h  print_runtime_usage.h  string_helpers.h
eden/backends/: AbstractBackend.h
eden/backends/cpu/: CpuBackend.cpp  CpuBackend.h
eden/backends/gpu/: GpuBackend.cpp  GpuBackend.cu  GpuBackend.h
eden/neuroml/: LEMS_Expr.lex
examples/: LEMS_NML2_Ex25_MultiCelltypes_TEST.xml  NML2_MultiCompCellNetwork.nml  NML2_SingleCompHHCell.nml
examples/io/: C51A.cell.nml  C51A.net.nml  C66A.cell.nml  C66A.net.nml  Run_C51A.nml  Run_C66A.nml  Run_C66A.xml  plot_gpu_vs_cpu.py  write_C51A.net.nml.py
examples/io/channels/: ca.nml
testing/ascent/: buildAscent.sh
testing/regression_test/: .gitignore  regression_test.py
